[package]
name = "md_dev_kernel"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
tezos-smart-rollup = "0.2.1"
serde = { version = "1.0.181", features = ["derive"]}
serde-json-wasm = "1.0.0"
serde_json = "1.0.104"
tezos_data_encoding = {version = "0.5.0"}
magic-crypt = { version = "3.1.12" }

[build]
target = "aarch64-apple-darwin"